nav margin tweak low res for hide behind menu issue

--- a/ui/css/homepage.css
+++ b/ui/css/homepage.css
@@ -2011,8 +2011,8 @@ p a:hover, p a:focus {
 
 @media screen and (max-width: 845px) {
 	
-	main {
-		margin-top: 14vw !important;
+	.new-site-header--homepage {
+		margin-top: 11vw !important;
 	}
 	
 	html {
